[package]
name = "clob-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "sync"] }
anyhow = "1.0"
bytes = "1"
crossbeam = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt","env-filter"] }
hdrhistogram = "7"